<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_app_found">No valid app found</string>
    <string name="maximum_share_reached">You cannot share this much content at once</string>
    <string name="open_with">Open with</string>
    <string name="value_copied_to_clipboard">Value copied to clipboard</string>
    <string name="an_error_occurred">An error occurred: %s</string>
    <string name="simple_commons">Simple Commons</string>
    <string name="share_via">Share via</string>
    <string name="temporarily_show_hidden">Temporarily show hidden</string>
    <string name="stop_showing_hidden">Stop showing hidden media</string>
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="share">Share</string>
    <string name="select_all">Select all</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="select_storage">Select storage</string>
    <string name="internal">Internal</string>
    <string name="sd_card">SD Card</string>
    <string name="root">Root</string>
    <string name="sd_card_usb_same">SD card and USB device paths cannot be the same</string>
    <string name="wrong_root_selected">Wrong folder selected, please select the root folder of your SD card</string>
    <string name="usb">USB</string>
    <string name="confirm_usb_storage_access_text">Please choose the top folder of the USB device on the next screen, to grant access</string>
    <string name="wrong_root_selected_usb">Wrong folder selected, please select the root folder of your USB device</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="confirm_storage_access_title">Confirm external storage access</string>
    <string name="confirm_storage_access_text">Please choose the top folder of the SD card on the next screen, to grant write access</string>
    <string name="confirm_storage_access_text_sd">If you don\'t see the SD card, try this</string>
    <string name="confirm_selection">Confirm selection</string>
    <plurals name="items">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="no_storage_permissions">Storage permission is required</string>
    <string name="search">Search</string>
    <string name="type_2_characters">Type in at least 2 characters to start the search.</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="last_modified">Last modified</string>
    <string name="date_taken">Date taken</string>
    <string name="title">Title</string>
    <string name="filename">Filename</string>
    <string name="extension">Extension</string>
    <string name="random">Random</string>
    <string name="sort_randomly">Sort randomly</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="use_for_this_folder">Use for this folder only</string>
    <string name="sort_numeric_parts">Sort numeric parts by actual value</string>
    <string name="properties">Properties</string>
    <string name="path">Path</string>
    <string name="items_selected">Items selected</string>
    <string name="direct_children_count">Direct children count</string>
    <string name="files_count">Total files count</string>
    <string name="resolution">Resolution</string>
    <string name="duration">Duration</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="focal_length">Focal length</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso_speed">ISO speed</string>
    <string name="f_number">F-number</string>
    <string name="camera">Camera</string>
    <string name="exif">EXIF</string>
    <string name="song_title">Song title</string>
    <string name="gps_coordinates">GPS coordinates</string>
    <string name="altitude">Altitude</string>
    <string name="source_file_doesnt_exist">Source file %s doesn\'t exist</string>
    <string name="no_items_found">No items found.</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="seconds_raw">seconds</string>
    <string name="minutes_raw">minutes</string>
    <string name="hours_raw">hours</string>
    <string name="days_raw">days</string>
    <plurals name="seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <plurals name="seconds_before">
        <item quantity="one">%d second before</item>
        <item quantity="other">%d seconds before</item>
    </plurals>
    <plurals name="minutes_before">
        <item quantity="one">%d minute before</item>
        <item quantity="other">%d minutes before</item>
    </plurals>
    <plurals name="hours_before">
        <item quantity="one">%d hour before</item>
        <item quantity="other">%d hours before</item>
    </plurals>
    <plurals name="days_before">
        <item quantity="one">%d day before</item>
        <item quantity="other">%d days before</item>
    </plurals>
    <plurals name="weeks_before">
        <item quantity="one">%d week before</item>
        <item quantity="other">%d weeks before</item>
    </plurals>
    <plurals name="months_before">
        <item quantity="one">%d month before</item>
        <item quantity="other">%d months before</item>
    </plurals>
    <plurals name="years_before">
        <item quantity="one">%d year before</item>
        <item quantity="other">%d years before</item>
    </plurals>
    <plurals name="by_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="by_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="by_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="by_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="by_weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>
    <plurals name="by_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="by_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>
    <string name="no_reminder">No reminder</string>
    <string name="at_start">At start</string>
    <string name="app_name">Simple File Manager</string>
    <string name="app_launcher_name">File Manager</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="go_to_home_folder">Go to home folder</string>
    <string name="set_as_home_folder">Set as home folder</string>
    <string name="home_folder_updated">Home folder updated</string>
    <string name="copy_path">Copy path to clipboard</string>
    <string name="path_copied">Path copied</string>
    <string name="select_audio_file">Please select an audio file</string>
    <string name="search_folder">Search folder</string>
    <string name="rooted_device_only">This operation works only on rooted devices</string>
    <string name="open_as">Open as</string>
    <string name="text_file">Text file</string>
    <string name="image_file">Image file</string>
    <string name="audio_file">Audio file</string>
    <string name="video_file">Video file</string>
    <string name="other_file">Other file</string>
    <string name="compress">Compress</string>
    <string name="decompress">Decompress</string>
    <string name="compress_as">Compress as</string>
    <string name="compressing">Compressing…</string>
    <string name="decompressing">Decompressing…</string>
    <string name="compression_successful">Compression successful</string>
    <string name="decompression_successful">Decompression successful</string>
    <string name="compressing_failed">Compressing failed</string>
    <string name="decompressing_failed">Decompressing failed</string>
    <string name="manage_favorites">Manage favorites</string>
    <string name="go_to_favorite">Go to favorite</string>
    <string name="favorites_activity_placeholder">You can add frequently used folders to favorites for easy access from anywhere.</string>
    <string name="file_editor">File Editor</string>
    <string name="enable_root_access">Enable root access</string>
    <string name="app_title">Simple File Manager Pro - Manage files easy &amp; fast</string>
    <string name="app_short_description">Easy app for managing your files without ads, respecting your privacy &amp; security</string>
</resources>