<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/cab_confirm_selection"
        android:icon="@drawable/ic_check_vector"
        android:title="@string/confirm_selection"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_properties"
        android:icon="@drawable/ic_info"
        android:title="@string/properties"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_share"
        android:icon="@drawable/ic_share_vector"
        android:title="@string/share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cab_copy_path"
        android:title="@string/copy_path"
        app:showAsAction="never"/>
    <item
        android:id="@+id/cab_select_all"
        android:icon="@drawable/ic_select_all_vector"
        android:title="@string/select_all"
        app:showAsAction="ifRoom"/>
</menu>
